test/corpus/structs_traits.txt
================================================================================
Simple struct definition
================================================================================

struct Point:
    var x: Int
    var y: Int

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))))

================================================================================
Struct with meta parameters (generics)
================================================================================

struct Array[T: Type, N: Int]:
    var data: T

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier)))
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier))))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))))

================================================================================
Struct with constructor
================================================================================

struct Point:
    var x: Int
    var y: Int
    
    def __init__(out self, x: Int, y: Int):
        self.x = x
        self.y = y

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (convention_parameter
          convention: (argument_convention)
          name: (identifier))
        (typed_parameter
          name: (identifier)
          type: (type
            (identifier)))
        (typed_parameter
          name: (identifier)
          type: (type
            (identifier))))
      body: (expression_statement
        (assignment
          left: (attribute
            object: (identifier)
            attribute: (identifier))
          right: (identifier)))
      body: (expression_statement
        (assignment
          left: (attribute
            object: (identifier)
            attribute: (identifier))
          right: (identifier))))))

================================================================================
Struct with method
================================================================================

struct Point:
    var x: Int
    
    def distance(self) -> Float64:
        return sqrt(self.x * self.x)

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (identifier))
      return_type: (type
        (identifier))
      body: (return_statement
        (call
          function: (identifier)
          arguments: (argument_list
            (binary_operator
              left: (attribute
                object: (identifier)
                attribute: (identifier))
              right: (attribute
                object: (identifier)
                attribute: (identifier)))))))))

================================================================================
Simple trait definition
================================================================================

trait Movable:
    def move(mut self, dx: Int, dy: Int):
        pass

--------------------------------------------------------------------------------

(module
  (trait_definition
    name: (identifier)
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (convention_parameter
          convention: (argument_convention)
          name: (identifier))
        (typed_parameter
          name: (identifier)
          type: (type
            (identifier)))
        (typed_parameter
          name: (identifier)
          type: (type
            (identifier))))
      body: (pass_statement))))

================================================================================
Trait with comptime member requirement
================================================================================

trait HasStaticValue:
    comptime STATIC_VALUE: Int

--------------------------------------------------------------------------------

(module
  (trait_definition
    name: (identifier)
    body: (comptime_member_declaration
      name: (identifier)
      type: (type
        (identifier)))))

================================================================================
Struct implementing trait with inheritance syntax
================================================================================

struct MyType(Movable):
    var value: Int

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    superclasses: (struct_superclasses
      (identifier))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))))

================================================================================
Struct with static method
================================================================================

struct Math:
    @staticmethod
    def add(x: Int, y: Int) -> Int:
        return x + y

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    body: (decorated_definition
      (decorator
        (identifier))
      definition: (function_definition
        name: (identifier)
        parameters: (parameters
          (typed_parameter
            name: (identifier)
            type: (type
              (identifier)))
          (typed_parameter
            name: (identifier)
            type: (type
              (identifier))))
        return_type: (type
          (identifier))
        body: (return_statement
          (binary_operator
            left: (identifier)
            right: (identifier)))))))

================================================================================
Struct with destructor
================================================================================

struct Resource:
    var handle: Int
    
    def __del__(deinit self):
        print("cleaning up")

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (convention_parameter
          convention: (argument_convention)
          name: (identifier)))
      body: (expression_statement
        (call
          function: (identifier)
          arguments: (argument_list
            (string
              (string_start)
              (string_end))))))))

================================================================================
Struct with multiple methods and fields
================================================================================

struct Vector[T: Type]:
    var data: T
    var size: Int
    
    def __init__(out self):
        self.size = 0
    
    def append(mut self, value: T):
        pass
    
    def get(ref[self] self, index: Int) -> ref[self] T:
        return self.data

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier))))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (convention_parameter
          convention: (argument_convention)
          name: (identifier)))
      body: (expression_statement
        (assignment
          left: (attribute
            object: (identifier)
            attribute: (identifier))
          right: (integer))))
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (convention_parameter
          convention: (argument_convention)
          name: (identifier))
        (typed_parameter
          name: (identifier)
          type: (type
            (identifier))))
      body: (pass_statement))
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (convention_parameter
          convention: (argument_convention
            origin: (identifier))
          name: (identifier))
        (typed_parameter
          name: (identifier)
          type: (type
            (identifier))))
      return_type: (type
        convention: (argument_convention
          origin: (identifier))
        (identifier))
      body: (return_statement
        (attribute
          object: (identifier)
          attribute: (identifier))))))

================================================================================
Struct with where clause
================================================================================

struct MyStruct[T: SomeTrait] where T == Int:
    pass

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier))))
    where_clause: (where_clause
      constraint: (comparison_operator
        (identifier)
        (identifier)))
    body: (pass_statement)))

================================================================================
Struct method with multiple ref convention parameters
================================================================================

struct Array:
    def unsafe_ptr[origin: Origin, address_space: AddressSpace](ref[origin, address_space] self):
        pass

--------------------------------------------------------------------------------

(module
  (struct_definition
    (identifier)
    (function_definition
      (identifier)
      (meta_parameters
        (meta_parameter
          (identifier)
          (type
            (identifier)))
        (meta_parameter
          (identifier)
          (type
            (identifier))))
      (parameters
        (convention_parameter
          (argument_convention
            (identifier)
            (identifier))
          (identifier)))
      (pass_statement))))

================================================================================
Struct with conditional trait inheritance and where clause
================================================================================

struct ConditionallyLinearType[T: AnyType](ImplicitlyDestructible where conforms_to(T, ImplicitlyDestructible)):
    pass

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier))))
    superclasses: (struct_superclasses
      (identifier)
      (where_clause
        constraint: (call
          function: (identifier)
          arguments: (argument_list
            (identifier)
            (identifier)))))
    body: (pass_statement)))

================================================================================
B2 trait conformance and extension definition
================================================================================

trait HasValue:
    def get(self) -> Int:
        ...

struct Value(HasValue):
    var storage: Int

__extension Value:
    def doubled(self) -> Int:
        return self.storage * 2

--------------------------------------------------------------------------------

(module
  (trait_definition
    name: (identifier)
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (identifier))
      return_type: (type
        (identifier))
      body: (expression_statement
        (ellipsis))))
  (struct_definition
    name: (identifier)
    superclasses: (struct_superclasses
      (identifier))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier)))))
  (extension_definition
    name: (identifier)
    body: (function_definition
      name: (identifier)
      parameters: (parameters
        (identifier))
      return_type: (type
        (identifier))
      body: (return_statement
        (binary_operator
          left: (attribute
            object: (identifier)
            attribute: (identifier))
          right: (integer))))))
