test/corpus/variables.txt
================================================================================
Variable declaration with var keyword and type
================================================================================

def test():
    var x: Int = 10

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))
        right: (integer)))))

================================================================================
Variable declaration with var keyword without type
================================================================================

def test():
    var y = 20

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        right: (integer)))))

================================================================================
Implicit variable declaration (Python-style)
================================================================================

def test():
    z = 30

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (expression_statement
      (assignment
        left: (identifier)
        right: (integer)))))

================================================================================
Compile-time variable with comptime
================================================================================

def test():
    comptime size = 100
    comptime MAX_X: Scalar[DType.float32] = 0.7

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (comptime_declaration
      left: (identifier)
      right: (integer))
    body: (comptime_declaration
      left: (identifier)
      type: (type
        (subscript
          value: (identifier)
          subscript: (attribute
            object: (identifier)
            attribute: (identifier))))
      right: (float))))

================================================================================
Reference binding with ref
================================================================================

def test():
    var x = 10
    ref y = x
    ref [f] z = f.val

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        right: (integer)))
    body: (expression_statement
      (assignment
        left: (ref_pattern
          pattern: (identifier))
        right: (identifier)))
    body: (expression_statement
      (assignment
        left: (ref_pattern
          origin: (identifier)
          pattern: (identifier))
        right: (attribute
          object: (identifier)
          attribute: (identifier))))))

================================================================================
Multiple variable declarations
================================================================================

def test():
    var a: Int = 1
    var b: Float64 = 2.0
    var c = "hello"

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))
        right: (integer)))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))
        right: (float)))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        right: (string
          (string_start)
          (string_end))))))

================================================================================
Struct field declarations with var
================================================================================

struct Point:
    var x: Int
    var y: Int

--------------------------------------------------------------------------------

(module
  (struct_definition
    name: (identifier)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (identifier))))))

================================================================================
Global variable declarations
================================================================================

var global_count: Int = 0

def increment():
    global_count += 1

--------------------------------------------------------------------------------

(module
  (expression_statement
    (assignment
      left: (var_pattern
        pattern: (identifier))
      type: (type
        (identifier))
      right: (integer)))
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (expression_statement
      (augmented_assignment
        left: (identifier)
        right: (integer)))))

================================================================================
Variable with complex type annotation
================================================================================

def test():
    var vec: SIMD[DType.float32, 4] = SIMD[DType.float32, 4](1.0)

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (expression_statement
      (assignment
        left: (var_pattern
          pattern: (identifier))
        type: (type
          (subscript
            value: (identifier)
            subscript: (attribute
              object: (identifier)
              attribute: (identifier))
            subscript: (integer)))
        right: (call
          function: (subscript
            value: (identifier)
            subscript: (attribute
              object: (identifier)
              attribute: (identifier))
            subscript: (integer))
          arguments: (argument_list
            (float)))))))

================================================================================
For loop with ref pattern
================================================================================

def test():
    for ref x in list:
        print(x)

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (for_statement
      left: (ref_pattern
        pattern: (identifier))
      right: (identifier)
      body: (expression_statement
        (call
          function: (identifier)
          arguments: (argument_list
            (identifier)))))))

================================================================================
Call expression assignment (reference-returning call)
================================================================================

def test():
    self._tensors._unsafe_ref(i) = tensor

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters)
    (expression_statement
      (assignment
        (call
          (attribute
            (attribute
              (identifier)
              (identifier))
            (identifier))
          (argument_list
            (identifier)))
        (identifier)))))

================================================================================
Escaped identifiers
================================================================================

def test_escaped_identifiers() raises:
    var `struct` = 10
    var `my value` = 30
    assert_equal(`struct`, 10)

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters)
    (function_modifier)
    (expression_statement
      (assignment
        (var_pattern
          (identifier))
        (integer)))
    (expression_statement
      (assignment
        (var_pattern
          (identifier))
        (integer)))
    (expression_statement
      (call
        (identifier)
        (argument_list
          (identifier)
          (integer))))))

================================================================================
For loop with var pattern
================================================================================

def test():
    for var x in y:
        print(x)

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters)
    (for_statement
      (var_pattern
        (identifier))
      (identifier)
      (expression_statement
        (call
          (identifier)
          (argument_list
            (identifier)))))))
